--- a/index.html
+++ b/index.html
@@ -1,17 +1,26 @@
 
-    <html>
+    <!DOCTYPE html>
+    <html lang="en">
     <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Kang Siram</title>
+
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+        
     </head>
     <body>
     <div class="container">
         <div class="row">
     
-            <button class="btn" data-clipboard-text="https://marketplace.plantvsundead.com/farm/other/0x53a987ecbd7c756743711e1ed9aab70920c0ba28
-">
+            <button class="btn" data-clipboard-text="https://marketplace.plantvsundead.com/farm/other/0x53a987ecbd7c756743711e1ed9aab70920c0ba28">
                 Copy
-            </button> <a href='https://marketplace.plantvsundead.com/farm/other/0x53a987ecbd7c756743711e1ed9aab70920c0ba28
-' target='_blank'>1. 0x53a987ecbd7c756743711e1ed9aab70920c0ba28
-</a></br>
+            </button> 
+            <a href='https://marketplace.plantvsundead.com/farm/other/0x53a987ecbd7c756743711e1ed9aab70920c0ba28' target='_blank'>
+                1. 0x53a987ecbd7c756743711e1ed9aab70920c0ba28
+            </a>
+            </br>
             <button class="btn" data-clipboard-text="https://marketplace.plantvsundead.com/farm/other/0x876f76e793b3e00ab9d841ba028fbdf2ccd12636
 ">
                 Copy
