--- a/kang-siram/public/index.html
+++ b/kang-siram/public/index.html
@@ -13,6 +13,7 @@
 
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6995151169286605"
      crossorigin="anonymous"></script>
+     <script src="gt.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
